# MusicSyncShare

./: .replit  app.py  models.py  pyproject.toml
instance/: songs.db
static/js/: app.js
templates/: index.html
