[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.35.39",
    "botocore>=1.35.39",
    "sqlalchemy>=2.0.35",
    "werkzeug>=3.0.4",
]
